log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: log-output-vol
          persistentVolumeClaim:
            claimName: log-output-pvc  
      containers:
        - name: log-output-server
          image: log-output-server:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-output-vol
              mountPath: /usr/src/app/files
        - name: log-output-writer
          image: log-output-writer:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: log-output-vol
              mountPath: /usr/src/app/files
